tests/error/poly_errors/arg_mismatch1.err
Guppy compilation failed. Error in file $FILE:17

15:    @guppy(module)
16:    def main(x: bool, y: tuple[bool]) -> None:
17:        foo(x, y)
                  ^
GuppyTypeError: Expected argument of type `bool`, got `(bool)`
